--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Servidor Backend",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Fernando Nunez",
   "license": "ISC",
