--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-DB_CNN=mongodb+srv://fernando:GrQWqbuMFbGjFXPC@cluster0.kcita.mongodb.net/test
+DB_CNN=mongodb://localhost:27017/empresaDB
